[gd_scene load_steps=18 format=2]

[ext_resource path="res://HexGrid.gd" type="Script" id=1]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://StartButton.gd" type="Script" id=3]
[ext_resource path="res://ResetButton.gd" type="Script" id=4]
[ext_resource path="res://StopButton.gd" type="Script" id=5]
[ext_resource path="res://MusMus-BGM-076.mp3" type="AudioStream" id=6]
[ext_resource path="res://RobotPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://RobotPlayer.gd" type="Script" id=8]
[ext_resource path="res://robot-moving.wav" type="AudioStream" id=9]
[ext_resource path="res://robot-death.wav" type="AudioStream" id=10]
[ext_resource path="res://robot-jumping.wav" type="AudioStream" id=11]
[ext_resource path="res://Fox.tscn" type="PackedScene" id=12]
[ext_resource path="res://Fox.gd" type="Script" id=13]
[ext_resource path="res://Kiwi.tscn" type="PackedScene" id=14]
[ext_resource path="res://Kiwi.gd" type="Script" id=15]
[ext_resource path="res://Godzilla.tscn" type="PackedScene" id=16]
[ext_resource path="res://Godzilla.gd" type="Script" id=17]

[node name="Main" type="Spatial"]

[node name="Godzilla" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 20 )
script = ExtResource( 17 )

[node name="Kiwi" parent="." instance=ExtResource( 14 )]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, 10, 0, 20 )
script = ExtResource( 15 )

[node name="Fox" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.004, 0, 0, 0, 0.004, 0, 0, 0, 0.004, 10, 0, 24 )
script = ExtResource( 13 )

[node name="Robot" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 15, 0, 25 )
script = ExtResource( 8 )

[node name="WalkingPlayer" type="AudioStreamPlayer" parent="Robot"]
stream = ExtResource( 9 )
volume_db = 5.0
pitch_scale = 4.0

[node name="DeathPlayer" type="AudioStreamPlayer" parent="Robot"]
stream = ExtResource( 10 )
volume_db = 5.0
pitch_scale = 1.5

[node name="JumpingPlayer" type="AudioStreamPlayer" parent="Robot"]
stream = ExtResource( 11 )
volume_db = 5.0

[node name="HexGrid" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="CameraGimbal" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 14.5, 5, 30 )
target = NodePath(".")
mouse_control = true

[node name="ResetButton" type="Button" parent="."]
margin_left = 20.0
margin_top = 200.0
margin_right = 120.0
margin_bottom = 235.0
mouse_default_cursor_shape = 2
text = "RESET"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopButton" type="Button" parent="."]
margin_left = 20.0
margin_top = 150.0
margin_right = 120.0
margin_bottom = 185.0
mouse_default_cursor_shape = 2
text = "STOP"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 20.0
margin_top = 100.0
margin_right = 120.0
margin_bottom = 135.0
mouse_default_cursor_shape = 2
text = "START"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaySpeedButotn1" type="Button" parent="."]
margin_left = 20.0
margin_top = 250.0
margin_right = 47.0
margin_bottom = 285.0
mouse_default_cursor_shape = 2
text = "1x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaySpeedButotn2" type="Button" parent="."]
margin_left = 57.0
margin_top = 250.0
margin_right = 84.0
margin_bottom = 285.0
mouse_default_cursor_shape = 2
text = "2x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaySpeedButotn3" type="Button" parent="."]
margin_left = 93.0
margin_top = 250.0
margin_right = 120.0
margin_bottom = 285.0
mouse_default_cursor_shape = 2
text = "3x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="ready" from="Robot" to="Robot" method="_on_Robot_ready"]
[connection signal="pressed" from="ResetButton" to="HexGrid" method="_on_ResetButton_pressed"]
[connection signal="pressed" from="StopButton" to="HexGrid" method="_on_StopButton_pressed"]
[connection signal="pressed" from="StartButton" to="HexGrid" method="_on_StartButton_pressed"]
[connection signal="pressed" from="PlaySpeedButotn1" to="HexGrid" method="_on_PlaySpeedButotn1_pressed"]
[connection signal="pressed" from="PlaySpeedButotn2" to="HexGrid" method="_on_PlaySpeedButotn2_pressed"]
[connection signal="pressed" from="PlaySpeedButotn3" to="HexGrid" method="_on_PlaySpeedButotn3_pressed"]
